--- a/samples/CustomerWithTenantAddonWebApi/CustomerWithTenantAddonWebApi.csproj
+++ b/samples/CustomerWithTenantAddonWebApi/CustomerWithTenantAddonWebApi.csproj
@@ -12,8 +12,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\src\Sekiban.EventSourcing.CosmosInfrastracture\Sekiban.Infrastructure.Cosmos.csproj" />
         <ProjectReference Include="..\..\src\Sekiban.Addon.Web\Sekiban.Addon.Web.csproj" />
+        <ProjectReference Include="..\..\src\Sekiban.Infrastructure.Cosmos\Sekiban.Infrastructure.Cosmos.csproj" />
         <ProjectReference Include="..\CustomerWithTenantAddonDomainContext\CustomerWithTenantAddonDomainContext.csproj" />
     </ItemGroup>
 
