--- a/src/Sekiban.Addon.Tenant/Sekiban.Addon.Tenant.csproj
+++ b/src/Sekiban.Addon.Tenant/Sekiban.Addon.Tenant.csproj
@@ -5,8 +5,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
-        <PackageId>JJ_Sekiban.EventSourcing.Addon.Tenant</PackageId>
-        <Version>0.7.9</Version>
+        <PackageId>JJ_Sekiban.Addon.Tenant</PackageId>
+        <Version>0.8.0</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework Tenant Addon</PackageDescription>
