--- a/src/Sekiban.Addon.Web/Sekiban.Addon.Web.csproj
+++ b/src/Sekiban.Addon.Web/Sekiban.Addon.Web.csproj
@@ -4,8 +4,8 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <OutputType>Library</OutputType>
-        <PackageId>JJ_Sekiban.EventSourcing.WebHelper</PackageId>
-        <Version>0.7.98</Version>
+        <PackageId>JJ_Sekiban.Addon.Web</PackageId>
+        <Version>0.8.0</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework WebHelper</PackageDescription>
@@ -22,7 +22,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Sekiban.EventSourcing.CosmosInfrastracture\Sekiban.Infrastructure.Cosmos.csproj" />
         <ProjectReference Include="..\Sekiban.Core\Sekiban.Core.csproj" />
     </ItemGroup>
 
