--- a/src/Sekiban.Addon.Tenant/Sekiban.Addon.Tenant.csproj
+++ b/src/Sekiban.Addon.Tenant/Sekiban.Addon.Tenant.csproj
@@ -6,28 +6,28 @@
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
         <PackageId>JJ_Sekiban.Addon.Tenant</PackageId>
-        <Version>0.8.0</Version>
+        <Version>0.8.1</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework Tenant Addon</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/JJ_Sekiban</RepositoryUrl>
-        <PackageVersion>0.8.0</PackageVersion>
-        <Description>フォルダ構成、プロジェクト構成のリファクタリング、ApplyEventの副作用削除</Description>
+        <PackageVersion>0.8.1</PackageVersion>
+        <Description>テストの名前変更など</Description>
     </PropertyGroup>
 
     <ItemGroup>
-        <Folder Include="Aggregates\SekibanTenantMembers\Commands" />
-        <Folder Include="Aggregates\SekibanTenantMembers\Events" />
-        <Folder Include="ValueObjects" />
-        <Folder Include="ValueObjects\Strings" />
+        <Folder Include="Aggregates\SekibanTenantMembers\Commands"/>
+        <Folder Include="Aggregates\SekibanTenantMembers\Events"/>
+        <Folder Include="ValueObjects"/>
+        <Folder Include="ValueObjects\Strings"/>
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+        <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0"/>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Sekiban.Core\Sekiban.Core.csproj" />
+        <ProjectReference Include="..\Sekiban.Core\Sekiban.Core.csproj"/>
     </ItemGroup>
 
 </Project>
