設定情報を隠す

--- a/samples/CustomerWebApi/appsettings.json
+++ b/samples/CustomerWebApi/appsettings.json
@@ -9,8 +9,8 @@
     "Default": {
       "AggregateEventCosmosDbContainer": "testevents",
       "AggregateEventCosmosDbContainerDissolvable": "dissolvableevents",
-      "CosmosDbEndPointUrl": "***REMOVED***",
-      "CosmosDbAuthorizationKey": "***REMOVED***",
+      "CosmosDbEndPointUrl": "https://[YOUR COSMOS ENDPOINT URL].documents.azure.com:443/",
+      "CosmosDbAuthorizationKey": "[Set your cosmos db key here]",
       "CosmosDbDatabase": "CustomerDb",
       "CosmosDbContainer": "testitems",
       "CosmosDbContainerDissolvable": "dissolvableitems",
