--- a/samples/CustomerWithTenantAddonWebApi/CustomerWithTenantAddonWebApi.csproj
+++ b/samples/CustomerWithTenantAddonWebApi/CustomerWithTenantAddonWebApi.csproj
@@ -1,11 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>CustomerWithTenantAddonWebApi</RootNamespace>
-    </PropertyGroup>
+      <UserSecretsId>1fdf227f-cf87-436b-a528-32e0b01fbb89</UserSecretsId>
+  </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
