--- a/samples/CustomerWebApi/CustomerWebApi.csproj
+++ b/samples/CustomerWebApi/CustomerWebApi.csproj
@@ -1,11 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <LangVersion>11</LangVersion>
         <TargetFramework>net7.0</TargetFramework>
-    </PropertyGroup>
+      <UserSecretsId>a871e401-5d10-4932-9bdf-0d5f641558da</UserSecretsId>
+  </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
