--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -29,10 +29,10 @@ jobs:
     - name: Secret Settings
       run: |
         pushd ./test/SampleProjectStoryXTest
-        dotnet user-secrets set "Sekiban:Default:CosmosDbEndPointUrl" secrets.TEST_COSMOS_ENDPOINT
-        dotnet user-secrets set "Sekiban:Default:CosmosDbAuthorizationKey" secrets.TEST_COSMOS_SECRET
-        dotnet user-secrets set "Sekiban:Secondary:CosmosDbEndPointUrl" secrets.TEST_COSMOS_ENDPOINT
-        dotnet user-secrets set "Sekiban:Secondary:CosmosDbAuthorizationKey" secrets.TEST_COSMOS_SECRET
+        dotnet user-secrets set "Sekiban:Default:CosmosDbEndPointUrl" ${{secrets.TEST_COSMOS_ENDPOINT}}
+        dotnet user-secrets set "Sekiban:Default:CosmosDbAuthorizationKey" ${{secrets.TEST_COSMOS_SECRET}}
+        dotnet user-secrets set "Sekiban:Secondary:CosmosDbEndPointUrl" ${{secrets.TEST_COSMOS_ENDPOINT}}
+        dotnet user-secrets set "Sekiban:Secondary:CosmosDbAuthorizationKey" ${{secrets.TEST_COSMOS_SECRET}}
     - name: Restore dependencies
       run: |
         dotnet restore Sekiban.sln
