--- a/src/Sekiban.Testing/Sekiban.Testing.csproj
+++ b/src/Sekiban.Testing/Sekiban.Testing.csproj
@@ -18,6 +18,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
         <PackageReference Include="xunit.assert" Version="2.4.1" />
+        <PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
     </ItemGroup>
     <ItemGroup>
         <None Update="host.json">
