--- a/samples/Customer.Domain/Customer.Domain.csproj
+++ b/samples/Customer.Domain/Customer.Domain.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\src\Sekiban.Addon.Web\Sekiban.Addon.Web.csproj" />
         <ProjectReference Include="..\SampleProject.Common\SampleProject.Common.csproj" />
         <ProjectReference Include="..\..\src\Sekiban.Core\Sekiban.Core.csproj" />
     </ItemGroup>
