--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Setup .NET 7
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 7.0.100-rc.2.22477.23
+        dotnet-version: 7.0.x
     - name: Setup .NET 6
       uses: actions/setup-dotnet@v1
       with:
