--- a/.github/workflows/run_test 2.yml
+++ b/.github/workflows/run_test 2.yml
@@ -8,7 +8,9 @@ on:
       - "src/**"
       - "test/**"
       - "samples/**"
-concurrency: CosmosDbConnect
+concurrency: 
+  group: CosmosDbConnect
+  cancel-in-progress: false
 jobs:
   build:
 
