--- a/.github/workflows/run_test 1.yml
+++ b/.github/workflows/run_test 1.yml
@@ -8,11 +8,13 @@ on:
       - "src/**"
       - "test/**"
       - "samples/**"
-concurrency: 
-  group: CosmosDbConnect
-  cancel-in-progress: false
 jobs:
   regular:
+    concurrency: 
+      group: CosmosDbConnect
+      cancel-in-progress: false
+    strategy:
+      max-parallel: 1
 
     runs-on: ubuntu-latest
     steps:
@@ -47,6 +49,11 @@ jobs:
       run: |
         dotnet test Sekiban.sln  --filter "Category!=Flaky&Category!=Performance"
   flaky:
+    concurrency: 
+      group: CosmosDbConnect
+      cancel-in-progress: false
+    strategy:
+      max-parallel: 1
 
     runs-on: ubuntu-latest
     steps:
@@ -81,6 +88,11 @@ jobs:
       run: |
         dotnet test Sekiban.sln  --filter "Category=Flaky"
   performance:
+    concurrency: 
+      group: CosmosDbConnect
+      cancel-in-progress: false
+    strategy:
+      max-parallel: 1
 
     runs-on: ubuntu-latest
     steps:
