Can Split Cosmos and Dynamo tests and can add another repository

--- a/src/Sekiban.Infrastructure.Dynamo/Sekiban.Infrastructure.Dynamo.csproj
+++ b/src/Sekiban.Infrastructure.Dynamo/Sekiban.Infrastructure.Dynamo.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Sekiban.Core\Sekiban.Core.csproj" />
+      <ProjectReference Include="..\Sekiban.Testing\Sekiban.Testing.csproj" />
     </ItemGroup>
 
 </Project>
