--- a/test/Sekiban.Consistency.Test.CosmosDb/Sekiban.Consistency.Test.CosmosDb.csproj
+++ b/test/Sekiban.Consistency.Test.CosmosDb/Sekiban.Consistency.Test.CosmosDb.csproj
@@ -53,4 +53,8 @@
         </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Stories\CustomerDbStoryBasic\" />
+    </ItemGroup>
+
 </Project>
